<resources>
    <string name="app_name">Tabletop Tracker</string>

    <!--activity_main.xml start -->
    <string name="main_Title">Select Your Character</string>
    <string name="main_About">About</string>
    <string name="main_Add">Create a Character</string>
    <string name="main_Pref">Preferences</string>
    <!--activity_main.xml end -->

    <!--new_character.xml start -->
    <string name="new_Create">Create</string>
    <string name="new_Delete">Delete</string>
    <string name="new_Description">Enter your character\'s name</string>
    <string name="new_Cancel">Cancel</string>
    <!--new_character.xml end -->

    <!--legal.xml start -->
    <string name="legal_Title">Legal/Disclaimer/Copyright</string>
    <string name="legal_Close">Close</string>
    <string name="legal_Content">
        MIT License\n
        \nCopyright © 2018 DnD_App \n
        \nPermission is hereby granted, free of charge, to any person obtaining a copy
        of this software and associated documentation files (the \"Software\"), to deal
        in the Software without restriction, including without limitation the rights
        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
        copies of the Software, and to permit persons to whom the Software is
        furnished to do so, subject to the following conditions: \n
        \nThe above copyright notice and this permission notice shall be included in all
        copies or substantial portions of the Software. \n
        \nTHE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
        SOFTWARE.
    </string>
    <!--legal.xml end -->

    <!--activity_preferences.xml start -->
    <string name="preferences_Title">Preferences</string>
    <string name="preference1">Our First Preference</string>
    <string name="preferences_Save">Save</string>
    <string name="preferences_Cancel">Cancel</string>
    <!--activity_preferences.xml end -->

    <!--editable_textview.xml start -->
    <string name="edit_Save">Save</string>
    <string name="edit_Cancel">Cancel</string>
    <string name="edit_statName">Stat Name</string>
    <string name="edit_StatValue">Stat Value</string>
    <string name="edit_StatBonus">Stat Bonus</string>
    <string name="edit_Remove">Remove</string>
    <!--editable_textview.xml end -->

    <!--activity_character_details.xml end -->
    <string name="details_Home">Home</string>
    <string name="details_DiceRoller">Dice</string>
    <!--activity_character_details.xml end -->

    <!--default end -->
    <string name="default_Empty" />
    <!--default end -->

    <!--dice_roller.xml end -->
    <string name="dice_Side"># Sides</string>
    <string name="dice_Rolls"># Rolls</string>
    <string name="dice_Roll">Roll</string>
    <string name="dice_Close">Close</string>
    <string name="dice_Clear">Clear</string>
    <string name="dice_Bonus">Stat Bonus</string>
    <!--dice_roller.xml end -->

    <string name="health_Current">Current</string>
    <string name="health_Max">Max</string>

    <string name="armor_Rate">Armor Rating</string>

    <string name="speed_Rate">Current Speed</string>

    <string name="new_Preset">Preset</string>

    <string name="themeSummary">Change your style</string>
    <string name="themeStyle">themeStyle</string>

    <string name="confirm_Confirm">Confirm</string>
    <string name="confirm_Cancel">Cancel</string>
</resources>
