<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/StatName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_statName"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/StatNameValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:singleLine="false" />

    <TextView
        android:id="@+id/StatValueTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_StatValue"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/StatValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/StatBonusTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_StatBonus"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/StatBonusValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/default_Empty"
        android:inputType="numberSigned" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Save"
            style="@android:style/Widget.Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_Save" />

        <Button
            android:id="@+id/Remove"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_Remove" />

        <Button
            android:id="@+id/Cancel"
            style="@android:style/Widget.Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_Cancel" />

    </LinearLayout>

</LinearLayout>