<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/main_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_Description"
        android:textAlignment="center"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:singleLine="false" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Create"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/new_Create" />

        <Button
            android:id="@+id/Delete"
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_Delete" />

    </LinearLayout>

    <Button
        android:id="@+id/Cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_Cancel" />
</LinearLayout>