<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/dice_Side"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/Sides"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/dice_Rolls"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/Rolls"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:layout_weight="0"
                android:text="@string/dice_Bonus"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/Bonus"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:background="@android:drawable/btn_dropdown" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/Scoller"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:fillViewport="true"
            android:scrollbarDefaultDelayBeforeFade="0"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/Results"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Roll"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dice_Roll" />

            <Button
                android:id="@+id/Clear"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dice_Clear" />

            <Button
                android:id="@+id/Close"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dice_Close" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>